# lab_game_core

./: README.md
lab_game/: CMakeLists.txt  area.cpp  building.cpp  game.cpp  game.h  help.txt  main.cpp  map.cpp  map.h  myProg  player.cpp  professor.cpp  professor.h  shop.cpp  student-first.cpp  student-genious.cpp  student.cpp  students.cpp  students.h  welcome.txt
lab_game/cmake_dir/: CMakeCache.txt  Makefile  MyLabGame  cmake_install.cmake  help.txt
lab_game/include/: NPC.h  area.h  building.h  enemy.h  man.h  map.h  player.h  professor.h  shop.h  student-first.h  student-genious.h  student.h
